--- a/AX6.config
+++ b/AX6.config
@@ -25,14 +25,14 @@ CONFIG_PACKAGE_luci-app-turboacc=y
 
 
 #ath11k无线及NSS
-CONFIG_DEFAULT_ath11k-firmware-ipq8074=y
+# CONFIG_DEFAULT_ath11k-firmware-ipq8074=y
 CONFIG_DEFAULT_nss-firmware-ipq8074=y
-CONFIG_PACKAGE_ath11k-firmware-ipq8074=y
+# CONFIG_PACKAGE_ath11k-firmware-ipq8074=y
 CONFIG_PACKAGE_nss-firmware-ipq8074=y
 # CONFIG_TARGET_ath25 is not set
 # CONFIG_TARGET_ath79 is not set
-CONFIG_DEFAULT_ath11k-firmware-ipq8074=y
-CONFIG_DEFAULT_kmod-ath11k-ahb=y
+# CONFIG_DEFAULT_ath11k-firmware-ipq8074=y
+# CONFIG_DEFAULT_kmod-ath11k-ahb=y
 CONFIG_DEFAULT_kmod-nf-nathelper=y
 CONFIG_DEFAULT_kmod-nf-nathelper-extra=y
 CONFIG_TARGET_INIT_PATH="/usr/sbin:/usr/bin:/sbin:/bin"
@@ -95,11 +95,11 @@ CONFIG_PACKAGE_kmod-nf-nathelper-extra=y
 CONFIG_PACKAGE_kmod-ath=y
 CONFIG_ATH_USER_REGD=y
 # CONFIG_PACKAGE_ATH_DEBUG is not set
-CONFIG_PACKAGE_ATH_DFS=y
+# CONFIG_PACKAGE_ATH_DFS=y
 # CONFIG_PACKAGE_kmod-ath10k is not set
 # CONFIG_PACKAGE_kmod-ath10k-ct is not set
 # CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers is not set
-CONFIG_PACKAGE_kmod-ath11k=y
+# CONFIG_PACKAGE_kmod-ath11k=y
 CONFIG_ATH11K_THERMAL=y
 #NSS
 # CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr-64 is not set
@@ -210,10 +210,10 @@ CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-theme-argon is not set
 # CONFIG_PACKAGE_luci-app-argon-config is not set
 
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
 
 CONFIG_PACKAGE_luci-app-syncdial=y
 
@@ -232,7 +232,7 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 
-CONFIG_PACKAGE_luci-app-wifischedule=y
+# CONFIG_PACKAGE_luci-app-wifischedule=y
 
 CONFIG_PACKAGE_luci-app-wireguard=y
 
